--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My page</title>
+    <title>My profile</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,6 +15,25 @@
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" type="image/x-icon" href="faviconlogo/favicon.ico?v=1" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="faviconlogo/favicon-16x16.png?v=1"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="faviconlogo/favicon-32x32.png?v=1"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="faviconlogo/apple-touch-icon.png?v=1"
+    />
+    <link rel="manifest" href="faviconlogo/site.webmanifest?v=1" />
     <style>
       .rounded-image {
         width: 60%;
@@ -46,12 +65,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active fs-5" aria-current="page" href="#"
+              <a class="nav-link active fs-5" aria-current="page" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-5" href="#">Favorite places</a>
+              <a class="nav-link fs-5" href="places.html">Favorite places</a>
             </li>
           </ul>
         </div>
